Working map view

--- a/src/js/templates/home.html
+++ b/src/js/templates/home.html
@@ -1,1 +1,10 @@
-<p>Home is where the heart is.</p>
+<div class="pure-g">
+    <div class="pure-u-1"><div id="map"></div></div>
+</div>
+
+<div id="graphs">
+  <div class="pure-g graph">
+      <div class="pure-u-1"><div class="tools">Tools</div></div>
+      <div class="pure-u-1"></div>
+  </div>
+</div>
