Working graphs for one sensor

--- a/src/css/sass/base.scss
+++ b/src/css/sass/base.scss
@@ -12,6 +12,7 @@
 @import "lib/_grids.scss";
 @import "lib/_grids-responsive.scss";
 @import "lib/_menus.scss";
+@import "lib/_chartist.scss";
 
 body {
   background: $background-color;
