--- a/src/js/templates/home.html
+++ b/src/js/templates/home.html
@@ -2,9 +2,5 @@
     <div class="pure-u-1"><div id="map"></div></div>
 </div>
 
-<div id="graphs">
-  <div class="pure-g graph">
-      <div class="pure-u-1"><div class="tools">Tools</div></div>
-      <div class="pure-u-1"></div>
-  </div>
+<div id="measures">
 </div>
