--- a/src/css/sass/utils.scss
+++ b/src/css/sass/utils.scss
@@ -20,7 +20,12 @@ $body-color: #231f20;
 $primary-color: #26e3b9;
 $primary-light-color: #9cf3e3;
 $active-color: #eed162;
+$inactive-color: #bcbfc0;
 $background-color: #e6e7e8;
+$orange: #f9af48;
+
+$pad: 20px;
+$hsize: 2rem;
 
 @import "font-awesome.min.css";
 
