--- a/src/js/templates/city.html
+++ b/src/js/templates/city.html
@@ -1,3 +1,6 @@
-<%= name %>
-<div id="overview-region"></div>
+<div id="city-overview">
+  <h2><%= name %></h2>
+  <div id="overview-region"></div>
+</div>
+<div id="tools-region"></div>
 <div id="graphs-region"></div>
