--- a/src/js/templates/measure.html
+++ b/src/js/templates/measure.html
@@ -1,6 +1,13 @@
 <div class="pure-g">
     <div class="pure-u-1">
-      <h3><%= name %></h3>
+      <div class="header">
+        <h3>
+          <%= meta.name %>
+          <!--
+          <a href="#" class="action-show-info"><i class="fa fa-info-circle"></i></a>
+          -->
+        </h3>
+      </div>
     </div>
     <div class="pure-u-1">
       <div class="measure-graph ct-chart"></div>
