--- a/src/js/templates/sparkline.html
+++ b/src/js/templates/sparkline.html
@@ -1,6 +1,10 @@
 <div class="pure-g">
     <div class="pure-u-1-2">
-      <h3><%= name %>: <%= values[values.length -1] %></h3>
+      <h3 class="name"><%= meta.name %></h3>
+      <h3 class="value">
+        <%= values[values.length -1] %>
+        <span class="unit"><%= meta.units %></span>
+      </h3>
     </div>
     <div class="pure-u-1-2">
       <div class="measure-graph ct-chart"></div>
