--- a/src/css/sass/styles.scss
+++ b/src/css/sass/styles.scss
@@ -9,5 +9,12 @@
  * COMPONENTS......Components, their modifiers and sub-components.
  ******************************************************************************/
 
+@import "lib/_base.scss";
+@import "lib/_grids.scss";
+@import "lib/_grids-responsive.scss";
+@import "lib/_menus.scss";
+@import "lib/_chartist.scss";
+
 @import "utils";
 @import "base";
+@import "components.scss";
