--- a/src/css/sass/utils.scss
+++ b/src/css/sass/utils.scss
@@ -23,6 +23,7 @@ $active-color: #eed162;
 $inactive-color: #bcbfc0;
 $background-color: #e6e7e8;
 $orange: #f9af48;
+$landmass-white: #f3f3f3;
 
 $pad: 20px;
 $minipad: 6px;
