--- a/src/js/templates/measure.html
+++ b/src/js/templates/measure.html
@@ -3,9 +3,7 @@
       <div class="header">
         <h3>
           <%= meta.name %>
-          <!--
-          <a href="#" class="action-show-info"><i class="fa fa-info-circle"></i></a>
-          -->
+          <a href="#" class="action action-show-info"><i class="fa fa-info-circle"></i></a>
         </h3>
       </div>
     </div>
