--- a/src/css/sass/utils.scss
+++ b/src/css/sass/utils.scss
@@ -16,12 +16,13 @@
  *      - Layout and grid sizing.
  ******************************************************************************/
 
-$body-color: #231f20;
+$background-color: #231f20;
+$background-light-color: #e6e7e8;
+$body-color: #414042; // was
 $primary-color: #26e3b9;
 $primary-light-color: #9cf3e3;
 $active-color: #eed162;
 $inactive-color: #bcbfc0;
-$background-color: #e6e7e8;
 $orange: #f9af48;
 $landmass-white: #f3f3f3;
 
