--- a/src/js/templates/measure.html
+++ b/src/js/templates/measure.html
@@ -3,8 +3,12 @@
       <div class="header">
         <h3>
           <%= meta.name %>
-          <a href="#" class="action action-show-info"><i class="fa fa-info-circle"></i></a>
+          <span class="action action-show-info"><i class="fa fa-info-circle"></i></span>
         </h3>
+
+        <div class="description">
+          <p><%= meta.description %></p>
+        </div>
       </div>
     </div>
     <div class="pure-u-1">
