--- a/src/js/templates/tools.html
+++ b/src/js/templates/tools.html
@@ -2,24 +2,21 @@
   <div class="pure-u-1-5">
     <div class="toolbox">
       <h3>Display</h3>
-      <a href="#" class="button active">Graphs</a>
-      <a href="#" class="button">Raw Data</a>
+      <span class="button active">Graphs</span>
+      <span class="button">Raw Data</span>
     </div>
   </div>
   <div class="pure-u-1-5">
     <div class="toolbox">
       <h3>Time</h3>
-      <a href="#" class="button">Hour</a>
-      <a href="#" class="button active">Day</a>
-      <a href="#" class="button">Week</a>
+      <span class="button">Hour</span>
+      <span class="button active">Day</span>
+      <span class="button">Week</span>
     </div>
   </div>
   <div class="pure-u-3-5">
-    <div class="toolbox">
-      <h3>City list will go here and this header will go away</h3>
-      <a href="#" class="button">City</a>
-      <a href="#" class="button">City</a>
-      <a href="#" class="button">City</a>
+    <div class="toolbox city-list">
+      <h3>Cities</h3>
     </div>
   </div>
 </div>
