--- a/src/js/templates/home.html
+++ b/src/js/templates/home.html
@@ -1,6 +1,2 @@
-<div class="pure-g">
-    <div class="pure-u-1"><div id="map"></div></div>
-</div>
-
-<div id="measures">
-</div>
+<div id="tools-region"></div>
+<div id="graphs-region"></div>
