--- a/src/js/templates/city.html
+++ b/src/js/templates/city.html
@@ -1,5 +1,5 @@
 <div id="city-overview">
-  <h2><%= name %></h2>
+  <h2><%= properties.name %></h2>
   <div id="overview-region"></div>
 </div>
 <div id="tools-region"></div>
