--- a/src/js/templates/tools.html
+++ b/src/js/templates/tools.html
@@ -1,22 +1,14 @@
-<div class="pure-g">
-  <div class="pure-u-1-5">
-    <div class="toolbox">
-      <h3>Display</h3>
-      <span class="button active">Graphs</span>
-      <span class="button">Raw Data</span>
-    </div>
-  </div>
-  <div class="pure-u-1-5">
-    <div class="toolbox">
-      <h3>Time</h3>
-      <span class="button">Hour</span>
-      <span class="button active">Day</span>
-      <span class="button">Week</span>
-    </div>
-  </div>
-  <div class="pure-u-3-5">
-    <div class="toolbox city-list">
-      <h3>Cities</h3>
-    </div>
-  </div>
+<div class="toolbox display-tools">
+  <h3>Display</h3>
+  <span class="button active action-select-graphs">Graphs</span>
+  <span class="button action-select-table">Raw Data</span>
+</div>
+<div class="toolbox time-tools">
+  <h3>Time</h3>
+  <span class="button">Hour</span>
+  <span class="button active">Day</span>
+  <span class="button">Week</span>
+</div>
+<div class="toolbox city-list">
+  <h3>Cities</h3>
 </div>
