--- a/src/js/templates/measure.html
+++ b/src/js/templates/measure.html
@@ -3,10 +3,18 @@
       <div class="header">
         <h3>
           <%= meta.name %>
-          <span class="action action-show-info"><i class="fa fa-info-circle"></i></span>
+          <span class="action action-show-info">
+            <i class="fa fa-info-circle"></i>
+          </span>
+          <span class="action action-minimize">
+            <i class="fa fa-minus-square-o"></i>
+          </span>
+          <span class="action action-maximize start-hidden">
+            <i class="fa fa-plus-square-o"></i>
+          </span>
         </h3>
 
-        <div class="description">
+        <div class="description start-hidden">
           <p><%= meta.description %></p>
         </div>
       </div>
