Support clicks on day/month/week selectors

--- a/src/js/templates/tools.html
+++ b/src/js/templates/tools.html
@@ -5,9 +5,9 @@
 </div>
 <div class="toolbox time-tools">
   <h3>Time</h3>
-  <span class="button" data-action="select-hourly">Hour</span>
-  <span class="button active" data-action="select-daily">Day</span>
-  <span class="button" data-action="select-weekly">Week</span>
+  <span class="button select-hourly" data-action="select-hourly">Hour</span>
+  <span class="button select-daily active" data-action="select-daily">Day</span>
+  <span class="button select-weekly" data-action="select-weekly">Week</span>
 </div>
 <div class="toolbox city-list">
   <h3>Cities</h3>
