--- a/src/js/templates/city.html
+++ b/src/js/templates/city.html
@@ -1,8 +1,7 @@
-<!--
 <div id="city-overview">
   <h2><%= properties.name %></h2>
+  <a href="#!/data/city/<%= properties.name %>">Get raw data</a>
   <div id="overview-region"></div>
 </div>
--->
 <div id="tools-region"></div>
 <div id="graphs-region"></div>
