--- a/src/js/templates/tools.html
+++ b/src/js/templates/tools.html
@@ -1,14 +1,21 @@
+<!--
 <div class="toolbox display-tools">
   <h3>Display</h3>
   <span class="button active action-select-graphs">Graphs</span>
   <span class="button action-select-table">Raw Data</span>
 </div>
-<div class="toolbox time-tools">
-  <h3>Time</h3>
-  <span class="button select-hourly" data-action="select-hourly">Hour</span>
-  <span class="button select-daily active" data-action="select-daily">Day</span>
-  <span class="button select-weekly" data-action="select-weekly">Week</span>
-</div>
 <div class="toolbox city-list">
   <h3>Cities</h3>
+</div>
+ -->
+
+<div class="toolbox time-tools">
+  <h3>Time</h3>
+  <span class="button select-hourly" data-action="display:hourly">Hour</span>
+  <span class="button select-daily active" data-action="display:daily">Day</span>
+  <span class="button select-weekly" data-action="display:weekly">Week</span>
+</div>
+
+<div class="toolbox last-updated-tools">
+Last updated: <span class="last-updated"></span>
 </div>
