--- a/src/js/templates/city.html
+++ b/src/js/templates/city.html
@@ -1,7 +1,10 @@
-<div id="city-overview">
+<div class="overview">
+  <div class="crumbs">
+    <a href="#!/">World view</a>
+  </div>
   <h2><%= properties.name %></h2>
   <a href="#!/data/city/<%= properties.name %>">Get raw data</a>
-  <div id="overview-region"></div>
 </div>
+
 <div id="tools-region"></div>
 <div id="graphs-region"></div>
