--- a/src/js/templates/home.html
+++ b/src/js/templates/home.html
@@ -1,2 +1,7 @@
+<div class="overview">
+  <h2>World View</h2>
+  <a href="#!/data/world">Get raw data</a>
+</div>
+
 <div id="tools-region"></div>
 <div id="graphs-region"></div>
