--- a/src/js/templates/source.html
+++ b/src/js/templates/source.html
@@ -1,2 +1,11 @@
+<div class="overview">
+  <div class="crumbs">
+    <a href="#!/">World view</a>:
+    <a href="#!/city/<%= properties.city %>"><%= properties.city %></a>
+  </div>
+  <h2><%= properties.name %></h2>
+  <a href="#!/data/city/<%= properties.name %>/source/<%= properties.name %>">Get raw data</a>
+</div>
+
 <div id="tools-region"></div>
 <div id="graphs-region"></div>
