--- a/src/css/sass/sparklines.scss
+++ b/src/css/sass/sparklines.scss
@@ -3,6 +3,7 @@
   top: 0;
   bottom: 0;
   width: 20%;
+  //min-width: 350px;
   z-index: 10000;
   background: $background-color;
   color: #fff;
@@ -57,6 +58,18 @@
 
     .measure-graph {
       height: 40px;
+    }
+  }
+
+  @media only screen
+  and (max-width : 768px) {
+    position: static;
+    width: auto;
+
+    .sparkline {
+      width: 44%;
+      padding: $minipad 3% $minipad 3%;
+      display: inline-block;
     }
   }
 }
