--- a/src/css/sass/utils.scss
+++ b/src/css/sass/utils.scss
@@ -21,7 +21,7 @@ $font-family: "Source Sans Pro", Helvetica, sans-serif;
 $background-color: #231f20;
 $background-light-color: #e6e7e8;
 $body-color: #414042;
-$primary-color: #26e3b9;
+$primary-color: #2fcdd1; // #26e3b9;
 $primary-light-color: #9cf3e3;
 $active-color: #eed162;
 $inactive-color: darken(#bcbfc0, 20%);
