--- a/src/js/templates/measure.html
+++ b/src/js/templates/measure.html
@@ -20,6 +20,9 @@
       </div>
     </div>
     <div class="pure-u-1">
-      <div class="measure-graph ct-chart"></div>
+      <div class="measure-graph ct-chart">
+        <div class="action action-time graph-back"><i class="fa fa-angle-left"></i></div>
+        <div class="action action-time graph-forward"><i class="fa fa-angle-right"></i></div>
+      </div>
     </div>
 </div>
