--- a/src/js/templates/source.html
+++ b/src/js/templates/source.html
@@ -1,10 +1,10 @@
 <div class="overview">
   <div class="crumbs">
     <a href="#!/">World view</a>:
-    <a href="#!/city/<%= properties.city %>"><%= properties.city %></a>
+    <a href="#!/cities/<%= properties.city %>"><%= properties.city %></a>
   </div>
   <h2><%= properties.name %></h2>
-  <a href="#!/data/city/<%= properties.name %>/source/<%= properties.name %>">Get raw data</a>
+  <a href="#!/data/cities/<%= properties.name %>/sources/<%= properties.name %>">Get raw data</a>
 </div>
 
 <div id="tools-region"></div>
