--- a/src/js/templates/home.html
+++ b/src/js/templates/home.html
@@ -1,6 +1,6 @@
 <div class="overview">
   <h2>World View</h2>
-  <a href="#!/data/world">Get raw data</a>
+  <a href="#!/data">Get raw data</a>
 </div>
 
 <div id="tools-region"></div>
